Lowercase 's' in services

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ crumbs:
   - link: http://www.ucl.ac.uk/ISD
     text: ISD
   - link: http://www.ucl.ac.uk/isd/services
-    text: Our Services
+    text: Our services
   - link: http://www.ucl.ac.uk/isd/services/research-it
     text: Research IT
   - link: http://www.ucl.ac.uk/isd/services/research-it/training
